Fixed the bugs, added fadeToggle adn linebreaks in the phrase
For peer review

--- a/game_show_app_v1.2/css/styles.css
+++ b/game_show_app_v1.2/css/styles.css
@@ -82,7 +82,7 @@ button {
   height: 65px;
   width: 65px;
   padding: 20px 1px 0 1px;
-  margin-right: 2px;
+  margin: 0 2px 6px 0;
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
